Creating new art files is now done on a background thread

--- a/WPF/Windows/NewASCIIArtDialogWindow.xaml
+++ b/WPF/Windows/NewASCIIArtDialogWindow.xaml
@@ -10,7 +10,7 @@
         <viewmodels:NewASCIIArtDialogViewModel x:Name="newFileDialogViewModel" x:Key="NewFileDialogViewModel"/>
     </Window.Resources>
     <Grid>
-        <Button Content="Create new ASCII art" Margin="10,0,10,5" VerticalAlignment="Bottom" Click="CreateButton_Click"/>
+        <Button Content="Create new ASCII art" Margin="10,0,10,5" VerticalAlignment="Bottom" Click="CreateButton_Click" IsEnabled="{Binding CanCreate, Source={StaticResource NewFileDialogViewModel}}"/>
         <TextBox HorizontalAlignment="Left" Margin="10,52,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="22" Width="120" Text="{Binding WidthText, Source={StaticResource NewFileDialogViewModel}, ValidatesOnNotifyDataErrors=True}"/>
         <Label Content="ASCII Art Options" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" FontSize="14"/>
         <Label Content="Size" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top"/>
