--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -62,7 +62,7 @@
                 </Menu>
             </ToolBar>
         </ToolBarTray>
-        <StackPanel Background="#FFA959FF" HorizontalAlignment="Left" Margin="0,27.98,0,0" Width="200" ClipToBounds="True">
+        <StackPanel Background="#FFA959FF" HorizontalAlignment="Left" Margin="0,28,0,0" Width="200" ClipToBounds="True">
             <Grid x:Name="ToolBox" VerticalAlignment="Top" Height="150" Background="#FFCECECE">
                 <Grid.DataContext>
                     <viewmodels:ToolSelectionViewModel x:Name="ToolSelectionViewModel"/>
@@ -93,10 +93,29 @@
                 </Grid>
             </StackPanel>
         </StackPanel>
-        <DockPanel LastChildFill="False" Background="#FFCDFF59" HorizontalAlignment="Right" Margin="0,28,0,0" Width="200" ClipToBounds="True"/>
+        <DockPanel Background="#FF73FF59" HorizontalAlignment="Right" Margin="0,28,0,0" Width="200" ClipToBounds="True">
+            <DockPanel.DataContext>
+                <viewmodels:LayerSelectionViewModel x:Name="LayerSelectionViewModel"/>
+            </DockPanel.DataContext>
+            <StackPanel VerticalAlignment="Top" Background="#FFDFF447" DockPanel.Dock="Top" Visibility="{Binding LayerOptionsVisibility}">
+                <Label Content="Layer Options" FontSize="14" Height="30"/>
+                <Grid Margin="0,5,0,5">
+                    <Label Content="Name" HorizontalAlignment="Left" VerticalAlignment="Top" Width="42"/>
+                    <TextBox TextWrapping="Wrap" Margin="45,3,3,3" Text="{Binding SelectedLayerName, Mode=TwoWay}"/>
+                </Grid>
+                <CheckBox Content="Visible" IsChecked="{Binding SelectedLayerVisibility, Mode=TwoWay}" FlowDirection="RightToLeft" HorizontalAlignment="Left" Padding="5,0,5,0" Margin="0,0,0,5">
+                    <CheckBox.Resources>
+                        <Style TargetType="{x:Type Path}">
+                            <Setter Property="FlowDirection" Value="LeftToRight" />
+                        </Style>
+                    </CheckBox.Resources>
+                </CheckBox>
+            </StackPanel>
+            <ListBox VerticalContentAlignment="Top" DockPanel.Dock="Top" MinHeight="30" ItemsSource="{Binding Layers}" FontSize="14" SelectedIndex="{Binding SelectedLayerID, Mode=TwoWay}"/>
+            <Grid DockPanel.Dock="Bottom" Height="45" VerticalAlignment="Bottom" Background="#FFE2E2E2"></Grid>
+        </DockPanel>
         <ScrollViewer Background="#FFFFBF59" Margin="200,28,200,0" ClipToBounds="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" PanningMode="Both" VerticalScrollBarVisibility="Auto">
-            <controls:ASCIIArtCanvasVisual x:Name="artCanvas" Margin="8,8,8,8" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" DisplayArt="{Binding CurrentArt, Source={StaticResource artCanvasViewModel}}" DisplayArtDraw="{Binding CurrentArtDraw, Source={StaticResource artCanvasViewModel}}" SelectionHighlightRect="{Binding Selected, Source={StaticResource artCanvasViewModel}}" TextSize="{Binding TextSize, Source={StaticResource artCanvasViewModel}}" Tool="{Binding CurrentTool, Source={StaticResource artCanvasViewModel}}" CanUseTool="{Binding CanUseTool, Source={StaticResource artCanvasViewModel}}" HighlightRectThickness="{Binding HighlightThickness, Source={StaticResource artCanvasViewModel}}" />
-            <!--<local:ASCIIArtCanvas x:Name="artCanvas" Margin="8,8,8,8" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>!-->
+            <controls:ASCIIArtCanvasVisual x:Name="artCanvas" Margin="8,8,8,8" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" DisplayArt="{Binding CurrentArt, Source={StaticResource artCanvasViewModel}}" DisplayArtDraw="{Binding CurrentArtDraw, Source={StaticResource artCanvasViewModel}}" SelectionHighlightRect="{Binding Selected, Source={StaticResource artCanvasViewModel}}" TextSize="{Binding TextSize, Source={StaticResource artCanvasViewModel}}" Tool="{Binding CurrentTool, Source={StaticResource artCanvasViewModel}}" CanUseTool="{Binding CanUseTool, Source={StaticResource artCanvasViewModel}}" HighlightRectThickness="{Binding HighlightThickness, Source={StaticResource artCanvasViewModel}}"/>
         </ScrollViewer>
     </Grid>
 </Window>
