--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -95,7 +95,7 @@
         </StackPanel>
         <DockPanel Background="#FF73FF59" HorizontalAlignment="Right" Margin="0,28,0,0" Width="200" ClipToBounds="True">
             <DockPanel.DataContext>
-                <viewmodels:LayerSelectionViewModel x:Name="LayerSelectionViewModel"/>
+                <viewmodels:LayerManagementViewModel x:Name="LayerManagementViewModel"/>
             </DockPanel.DataContext>
             <Grid DockPanel.Dock="Bottom" Height="45" VerticalAlignment="Top" Background="#FFE2E2E2">
                 <Grid.ColumnDefinitions>
@@ -105,11 +105,11 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/NewLayerIcon.png"/>
-                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/MoveLayerUpIcon.png" Grid.Column="1"/>
-                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/MoveLayerDownIcon.png" Grid.Column="2"/>
-                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/DuplicateLayerIcon.png" Grid.Column="3"/>
-                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/DestroyLayerIcon.png" Grid.Column="4"/>
+                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/NewLayerIcon.png" Command="{Binding CreateNewLayerCommand}"/>
+                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/MoveLayerUpIcon.png" Grid.Column="1" Command="{Binding MoveLayerUpCommand}"/>
+                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/MoveLayerDownIcon.png" Grid.Column="2" Command="{Binding MoveLayerDownCommand}"/>
+                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/DuplicateLayerIcon.png" Grid.Column="3" Command="{Binding DuplicateLayerCommand}"/>
+                <controls:ImageButton Margin="2,2,2,2" Height="{Binding ActualWidth, Mode=OneWay, RelativeSource={RelativeSource Self}}" ImageSource="/Resources/Images/LayerManagementIcons/DestroyLayerIcon.png" Grid.Column="4" Command="{Binding RemoveLayerCommand}"/>
             </Grid>
             <StackPanel VerticalAlignment="Top" Background="#FFDFF447" DockPanel.Dock="Top" Height="90" Visibility="{Binding LayerOptionsVisibility}">
                 <Label Content="Layer Options" FontSize="14" Height="30"/>
