--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AAP"
-             StartupUri="/WPF/Windows/MainWindow.xaml">
+             StartupUri="/WPF/Windows/MainWindow.xaml" ShutdownMode="OnMainWindowClose">
     <Application.Resources>
          
     </Application.Resources>
