--- a/WPF/Windows/BackgroundTaskWindow.xaml
+++ b/WPF/Windows/BackgroundTaskWindow.xaml
@@ -10,8 +10,8 @@
         <viewmodels:BackgroundTaskViewModel x:Name="ViewModel" x:Key="ViewModel"/>
     </Window.Resources>
     <Grid>
-        <Label Margin="10,10,10,10" VerticalAlignment="Top" Content="{Binding TaskState, Source={StaticResource ViewModel}}"/>
-        <Label Margin="10,44,10,0" VerticalAlignment="Top" ContentStringFormat="({0})" Content="{Binding TaskElapsedTimeString, Mode=OneWay, Source={StaticResource ViewModel}}"/>
-        <ProgressBar Margin="10,77,10,10" IsIndeterminate="{Binding IsDeterminate, Source={StaticResource ViewModel}}" Value="{Binding TaskProgress, Source={StaticResource ViewModel}}"/>
+        <Label Margin="10,10,10,10" VerticalAlignment="Top" Content="{Binding BackgroundTask.Objective, Source={StaticResource ViewModel}}"/>
+        <Label Margin="10,44,10,0" VerticalAlignment="Top" ContentStringFormat="({0})" Content="{Binding TaskElapsedTimeString, Source={StaticResource ViewModel}}"/>
+        <ProgressBar Margin="10,77,10,10" IsIndeterminate="{Binding BackgroundTask.IsDeterminate, Source={StaticResource ViewModel}}" Value="{Binding BackgroundTask.ProgressPercentage, Source={StaticResource ViewModel}}"/>
     </Grid>
 </Window>
